NG | Services Init

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -2,7 +2,7 @@
 <div class="">
 
   <!--  <ChangeContractMobile/>-->
-  <app-change-contract-mobile></app-change-contract-mobile>
+<!--  <app-change-contract-mobile></app-change-contract-mobile>-->
 
   <div class="w-full flex justify-between bg-white text-gray-900 px-5 md:px-9">
 
@@ -18,13 +18,14 @@
         <app-change-contract></app-change-contract>
 
     <div class="">
-      <div v-if="accountId" class="ml-auto hidden md:flex">
+<!--      v-if="accountId"-->
+      <div *ngIf="lotteryService.accountId; else elseBlock" class="ml-auto hidden md:flex">
         <!-- Account btn -->
         <a href="#" class="flex bg-yellow-400 text-base font-medium rounded-md py-2 px-5 my-5 hover:bg-yellow-300">
           <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
           </svg>
-          <!--          {{accountId}}-->
+                    {{lotteryService.accountId}}
         </a>
         <!-- Balance -->
         <!-- <a href="#" class="block flex bg-yellow-400  font-medium rounded-md py-2 px-5 my-5 ml-7 hover:bg-yellow-300">
@@ -39,7 +40,7 @@
         <!-- Logout btn -->
         <!--          @click="signOut" -->
         <button
-
+          (click)="lotteryService.handleSignOut()"
           class="flex bg-yellow-400 text-base font-medium rounded-md py-2 px-5 my-5 ml-7 hover:bg-yellow-300">
           <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6 text-gray-900" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
@@ -47,14 +48,16 @@
           Logout
         </button>
       </div>
-      <div v-else  class="ml-auto hidden md:flex">
+      <ng-template #elseBlock>
+      <div class="ml-auto hidden md:flex">
         <!--        @click="signIn"-->
         <button
-
+            (click)="lotteryService.handleSignIn()"
           class="block flex bg-yellow-400 text-base font-medium rounded-md py-2 px-5 my-5 ml-7 hover:bg-yellow-300">
           Login
         </button>
       </div>
+      </ng-template>
       <!-- Burger menu -->
       <a href="#" class="sm:block md:hidden flex mt-6 ml-auto text-gray-900">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
