NG | PRE PR all finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<!--Decoration -->
+<app-decoration-dots></app-decoration-dots>
+<app-decoration-lines></app-decoration-lines>
+<app-decoration-circle-lg></app-decoration-circle-lg>
+<app-decoration-circle-md></app-decoration-circle-md>
+<app-decoration-circle-sm></app-decoration-circle-sm>
+
 <header class="min-h-screen">
   <app-navigation></app-navigation>
   <app-page-title></app-page-title>
