--- a/src/app/components/page-title/page-title.component.html
+++ b/src/app/components/page-title/page-title.component.html
@@ -121,7 +121,7 @@
           Fee
         </p>
         <p class="text-gray-900 text-xl font-bold mt-2 ml-2">
-          {{lotteryService.fee}}
+          {{lotteryService.fee || '0 Near'}}
         </p>
       </div>
     </div>
