NG | Rework | PopUp fix

--- a/src/app/components/navigation/change-contract/change-contract.component.html
+++ b/src/app/components/navigation/change-contract/change-contract.component.html
@@ -15,7 +15,7 @@
 
   <!-- POPUP Form -->
   <div *ngIf="isChangeContractIdFormOpened || lotteryService.apiError"
-       class="absolute top-0 flex flex-col items-center z-10 bg-white rounded-xl shadow-xl pt-16 pb-8 px-5 md:px-20 md:w-500 w-screen">
+       class="absolute top-0 flex flex-col items-center z-10 bg-white rounded-xl shadow-xl pt-16 pb-8 px-5 w-screen md:px-20 md:w-500">
 
     <!-- NEAR Logo -->
     <svg xmlns="http://www.w3.org/2000/svg" width="151" height="40" viewBox="0 0 151 40" fill="none">
